--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:layout_margin="10dp">
 
 
     <TextView
@@ -11,26 +12,43 @@
         style="@style/textViewStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         tools:text="10" />
 
     <TextView
         android:id="@+id/tv_title"
         style="@style/textViewStyle"
+        app:layout_constraintTop_toBottomOf="@+id/tv_userID"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tools:text="HELLO" />
+
+    <ImageButton
+        android:id="@+id/btnUpgrade"
+        android:layout_width="wrap_content"
+        android:src="@drawable/ic_arrow"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="60dp"
+        app:layout_constraintStart_toEndOf="@+id/tv_title"
+        android:layout_height="wrap_content"
+        tools:ignore="ContentDescription" />
 
     <TextView
         android:id="@+id/tv_description"
         style="@style/textViewStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/tv_title"
         tools:text="DESCRIPTION" />
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_margin="12dp"
+        app:layout_constraintTop_toBottomOf="@+id/tv_description"
         android:background="@color/black" />
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
