--- a/app/src/main/res/layout/fragment_form.xml
+++ b/app/src/main/res/layout/fragment_form.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    tools:context=".ui.form.FormFragment">
+    tools:context=".ui.fragments.form.FormFragment">
 
     <EditText
         android:id="@+id/et_user_id"
