--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/formFragment"
-        android:name="kg.geektech.mokerapi.ui.form.FormFragment"
+        android:name="kg.geektech.mokerapi.ui.fragments.form.FormFragment"
         android:label="fragment_form"
         tools:layout="@layout/fragment_form" >
         <action
@@ -16,7 +16,7 @@
     </fragment>
     <fragment
         android:id="@+id/postsFragment"
-        android:name="kg.geektech.mokerapi.ui.posts.PostsFragment"
+        android:name="kg.geektech.mokerapi.ui.fragments.posts.PostsFragment"
         android:label="fragment_posts"
         tools:layout="@layout/fragment_posts" >
         <action
